[bdist_wheel]
universal = 1

[metadata]
description-file=README.md
license_file = LICENSE
home-page = https://github.com/ambujraj/AmbSQL
platform = any
author = Ambuj Raj
author-email = thecoderguy@outlook.com

[flake8]
doctests = True
exclude =  .git, .eggs, __pycache__, download/, docs/, build/, dist/

[options]
setup_requires =
    setuptools

[pydocstyle]
match-dir = (?!download)(?!docs)[^\.].*
match = (?!AmbSQL)(?!setup)[^\._].*\.py
inherit = false